fix padding bug on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -283,14 +283,14 @@ input[name='q']::placeholder {
 
 /* -------------------------------- Media Queries */
 
-/* Slightly larger container on xl screens */
+
 @media (min-width: 1200px) {
   .container {
     max-width: 80%;
   }
 }
 
-/* fixed top navbar only on medium and up */
+
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
         position: fixed;
@@ -306,7 +306,7 @@ input[name='q']::placeholder {
 
 }
 
-/* pad the top a bit when navbar is collapsed on mobile */
+
 @media (max-width: 991px) {
     .header-container {
         padding-top: 116px;
@@ -321,10 +321,10 @@ input[name='q']::placeholder {
     }
 }
 
-/* pad the top a bit when navbar is collapsed on mobile */
+
 @media (max-width: 440px) {
     .header-container {
-        padding-top: 250px;
+        padding-top: 120px;
     }
 
     .nav-link {
